feat: 공연/아티스트 API 개선
1. 공연 목록 API
2. 공연 상세 API
3. 아티스트 목록 API
4. 아티스트 상세 API